force-app/main/default/objects/Lead/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client inquiries</relationshipLabel>
    <relationshipName>Client_inquiries</relationshipName>
    <type>Lookup</type>
</CustomField>