force-app/main/default/objects/Lead/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <formula>Property_Na__r.Location__c</formula>
    <label>Location</label>
    <type>Text</type>
</CustomField>