force-app/main/default/objects/Lead/fields/Name_of_the_proprty__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_proprty__c</fullName>
    <label>Name of the proprty</label>
    <length>30</length>
    <type>Text</type>
</CustomField>