force-app/main/default/objects/Lead/fields/Property_Na__c.field-meta.xml
<CustomField>
    <fullName>Property_Na__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Na</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Client inquiries</relationshipLabel>
    <relationshipName>Client_inquiries</relationshipName>
    <type>Lookup</type>
</CustomField>