force-app/main/default/objects/Lead/fields/Property_Name__c.field-meta.xml
<CustomField>
    <fullName>Property_Name__c</fullName>
    <formula>Property_Na__r.Name</formula>
    <label>Property Name</label>
    <type>Text</type>
</CustomField>