force-app/main/default/objects/Lead/fields/Property_type__c.field-meta.xml
<CustomField>
    <fullName>Property_type__c</fullName>
    <formula>Property_Na__r.property_type__c</formula>
    <label>Property type</label>
    <type>Text</type>
</CustomField>