force-app/main/default/objects/Lead/listViews/client_inquiries_to_agent_Lead.listView-meta.xml
<ListView>
    <fullName>client_inquiries_to_agent_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>client inquiries to agent</label>
    <queue>client_inquiries_to_agent</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>