force-app/main/default/objects/Lead/listViews/ViewCustom1.listView-meta.xml
<ListView>
    <fullName>ViewCustom1</fullName>
    <columns>Property_Na__c</columns>
    <columns>Client_Name__c</columns>
    <columns>Location__c</columns>
    <columns>Price__c</columns>
    <columns>Property_type__c</columns>
    <columns>LEAD.RATING</columns>
    <filterScope>Everything</filterScope>
    <label>View - Custom 1</label>
</ListView>